force-app/main/default/objects/AdvAccountForecastFact/fields/SCDR_ActualAmount__c.field-meta.xml
<CustomField>
    <fullName>SCDR_ActualAmount__c</fullName>
    <label>Actual Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>