force-app/main/default/objects/AdvAccountForecastFact/fields/SCDR_ContractHeader__c.field-meta.xml
<CustomField>
    <fullName>SCDR_ContractHeader__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Header</label>
    <referenceTo>CA_Contract_Header__c</referenceTo>
    <relationshipLabel>Advanced Account Forecast Facts</relationshipLabel>
    <relationshipName>Advanced_Account_Forecast_Facts</relationshipName>
    <type>Lookup</type>
</CustomField>