force-app/main/default/objects/AdvAccountForecastFact/fields/SCDR_PlannedAmount__c.field-meta.xml
<CustomField>
    <fullName>SCDR_PlannedAmount__c</fullName>
    <label>Planned Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>